# StellarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcpkg.json  xmake.lua
.github/workflows/: main.yml
Editor/: App.cpp  App.h  CMakeLists.txt  HelmetScript.cpp  HelmetScript.h  app.cpp  app.h  helmet_script.cpp  helmet_script.h  main.cpp
Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  DockSpacePanel.cpp  DockSpacePanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewPortPanel.cpp  ViewPortPanel.h
Editor/panels/: content_browser_panel.cpp  content_browser_panel.h  dock_space_panel.cpp  dock_space_panel.h  preferences_panel.cpp  preferences_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  viewport_panel.cpp  viewport_panel.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  engine.h  pgepch.cpp  pgepch.h
Engine/Core/: Base.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Timer.h  Timestamp.h  Types.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Engine/Data/: Components.cpp  Components.h  Entity.cpp  Entity.h  Project.cpp  Project.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Engine/Graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Core.cpp  Core.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  FrameInfo.h  ImGuiLayer.cpp  ImGuiLayer.h  Image.cpp  Image.h  Model.cpp  Model.h  OffScreen.cpp  OffScreen.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  buffer.cpp  buffer.h  camera.cpp  camera.h  core.cpp  core.h  descriptors.cpp  descriptors.h  device.cpp  (+22 more)
Engine/Math/: Math.cpp  Math.h
Engine/Rendering/: render_system.cpp  render_system.h
Engine/Scripting/: NativeScript.cpp  NativeScript.h
Engine/System/: DefferedRenderingSystem.cpp  DefferedRenderingSystem.h  GameLoop.cpp  GameLoop.h  GridSystem.cpp  GridSystem.h  OffScreen.cpp  OffScreen.h  PhysicsSystem.cpp  PhysicsSystem.h  PointLightSystem.cpp  PointLightSystem.h  PostProcessingSystem.cpp  PostProcessingSystem.h  RenderSystem.cpp  RenderSystem.h  ShadowSystem.cpp  ShadowSystem.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h
Engine/Utils/: Utils.h
Engine/core/: UUID.cpp  UUID.h  base.h  input_manager.cpp  input_manager.h  key_codes.h  logger.cpp  logger.h  timer.h  timestamp.h  types.h  window.cpp  window.h
Engine/data/: components.cpp  components.h  entity.cpp  entity.h  project.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h
Engine/graphics/: buffer.cpp  buffer.h  camera.cpp  camera.h  core.cpp  core.h  dependencies.cpp  dependencies.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  frame_info.h  framebuffer.cpp  framebuffer.h  framebuffer_attachment.cpp  framebuffer_attachment.h  image.cpp  image.h  imgui_layer.cpp  imgui_layer.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vk_types.h
Engine/math/: math.cpp  math.h
Engine/physics/: body.h  contact.h  intersect.cpp  intersect.h  physics_system.cpp  physics_system.h  shapes.h
Engine/scripting/: native_script.cpp  native_script.h
Engine/system/: bloom_system.cpp  bloom_system.h  deferred_rendering_system.cpp  deferred_rendering_system.h  grid_system.cpp  grid_system.h  offscreen_system.cpp  offscreen_system.h  pbr_system.cpp  pbr_system.h  point_light_system.cpp  point_light_system.h  postprocessing_system.cpp  postprocessing_system.h  rendering_system.cpp  rendering_system.h  shadow_system.cpp  shadow_system.h
EngineEditor/: app.cpp  app.h  main.cpp
EngineEditor/Panels/: SceneHierarchyPanel.cpp
ExampleGame/: App.cpp  App.h  CMakeLists.txt  main.cpp
assets/: Example.scene
assets/models/: cube.gltf
assets/models/assets/shaders/: grid.frag.spv  grid.vert  grid.vert.spv  simple_shader.frag
assets/models/room/: room.gltf
assets/shaders/: a.spv  composition_shader.frag  composition_shader.vert  core.glsl  deferred_shader.frag  deferred_shader.vert  downsample.frag  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  forward_shader.frag  forward_shader.vert  genbrdflut.frag  genbrdflut.vert  grid.frag  grid.vert  irradiancecube.frag  irradiancecube.vert  point_light.frag  point_light.vert  post_processing.frag  post_processing.vert  prefilterenv.frag  prefilterenv.vert  shadow.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  skybox.frag  skybox.vert  upsample.frag  upsample.vert
cmake/: warnings.cmake
